Footer divs alignment fix

--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ html {
   justify-content: center;
 }
 
-
 .Logo {
   display: flex;
   flex-direction: row;
@@ -59,7 +58,6 @@ html {
 
 .Logo-image {
   opacity: 0.6;
-  
 }
 
 .Logo-name {
@@ -141,8 +139,6 @@ nav {
   color: white;
 }
 
-
-
 h1 {
   margin-top: 7rem;
 }
@@ -172,7 +168,6 @@ hr {
 .Agency p {
   padding: 3rem;
 }
-
 
 .Agency h1 {
   margin: 7rem 0rem 3rem 0rem;
@@ -580,7 +575,7 @@ textarea {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  min-height: 30vh;
+  height: 30vh;
 }
 /*  divs */
 .footer-logo {
@@ -619,11 +614,18 @@ textarea {
   margin: auto;
   padding: 1.5rem 0.5rem;
 }
-.footer h2 {
-  margin-bottom: 2rem;
+.first-footer-div h2 {
+  margin-bottom: 6rem;
 }
 .first-footer-div img {
+  margin-bottom: 4rem;
+}
+.second-footer-div h2 {
+  margin-bottom: 5rem;
+}
+.third-footer-div h2 {
   margin-bottom: 2rem;
+  margin-top: 1rem;
 }
 
 /* adress and phone div */
